--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <!-- Author: connor Knight -->
             <meta charset="UTF-8">
-            <link rel="stylesheet" type="text/css" href="css/oldLayout.css">
+            <link rel="stylesheet" type="text/css" href="CSS/oldLayout.css">
             <title>DS page</title>
         </head>
 
